[metadata]
author = Philip Howard
author_email = phil@gadgetoid.com
url = https://github.com/WiringPi/WiringPi-Python/
description = A python interface to WiringPi 2.0 library which allows for easily interfacing with the GPIO pins of the Raspberry Pi. Also supports i2c and SPI.
long_description = file:README.rst
license = LGPL
